[metadata]
name = backend
version = 0.0.1
description = Simple backend for computional calculations
author = Ayman A. Ameen 
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/ayman-ameen/backend
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Scientific/Engineering/Artificial Intelligence/computational sciences 


[options]
packages =
	backend
install_requires =
  numpy
  torch

